Edited wiki page Hydra_V4 through web user interface.

--- a/wiki/Hydra_V4.wiki
+++ b/wiki/Hydra_V4.wiki
@@ -152,3 +152,15 @@ For the splitter variant, install the J1772 inlet in the bottom side of the chas
 For each car, prepare its J1772 cable by installing it in a cable gland and installing the gland in the chassis. Route the two hot lines to the appropriate contactor and the ground to the ground block. Route the pilot wire up to the logic/display board and connect it to the pilot terminal. Do the same for the proximity line if you're building the splitter variant. There is no connection necessary to the ground terminal of the car pilot/proximity terminal.
 
 Attach the lid to the chassis, making sure not to pinch any wires between it and the chassis. Your Hydra is now complete and ready for testing.
+
+== Testing ==
+
+For the standalone variant, connect the AC input cable to its power source and turn the breaker on. For the splitter variant, connect the host EVSE's J1772 cable to the inlet. If your splitter Hydra has separate power, connect that to a power source. You should see the LCD backlight start white, then turn green. If it turns red, then one of the self tests has failed and you must troubleshoot it.
+
+If you're using the splitter variant, and the display comes up yellow, with "I:PAUSED" in the upper left corner, then that means that the host EVSE is not making an offer of power (that is, its pilot is not oscillating). If your splitter Hydra is not separately powered, then that is a paradox, since the host EVSE should not turn on and power the Hydra without offering a correct pilot. You should stop and troubleshoot at that point.
+
+For the splitter variant, the upper left corner will indicate the number of amps being offered by the host EVSE. Assuming that this value is not higher than either the inlet or outlet ampacity restrictions in the firmware, then if you connect a single car at this point, it should be able to charge, and should itself be offered that same amount of current. It might be helpful to use an EVSimMark2 to observe this.
+
+For the standalone variant, the upper left corner shows the time of day. Since the clock hasn't yet been set, it will be blank. To set the clock, check out the [https://code.google.com/p/open-evse/wiki/Hydra_EVSE#User's_guide User's Guide] to learn how the menu system works. The menu system will also allow you to set the configured maximum current. *WARNING* You must never exceed 80% of the current rating of the circuit supplying power to your Hydra! The NEC and UL require a 20% circuit de-rating for EVSEs since they are a constant maximum current draw when operating. If you wish to charge at 40A, you must use a circuit and breaker rated for at least 50A.
+
+Connect each J1772 car cable in turn to a vehicle and charge for 15 minutes. *Do not leave your Hydra unattended during this test!* As the car is charging, periodically feel the chassis and examine the wiring for any signs of heating. After the 15 minutes, disconnect power and quickly open the chassis and feel the wiring and contactors for elevated temperature. The wires will likely be warm, but if they are too hot to touch, then something is wrong and _must_ be corrected. This test should be repeated periodically during the service lifetime of the Hydra. Also, if during operation you see any signs of fog or smoke inside the chassis, or if any of the wiring changes color, that is a sign that unsafe temperature increases are taking place, and *must* be investigated and corrected. *DO NOT* reuse heat-damaged components!
