Edited wiki page OpenEVSE_II through web user interface.

--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -107,6 +107,28 @@ Prepare the AC cable by stripping 6 inches of its outer jacket and installing a 
 
 Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hot lines and the ammeter coil over one of them. Cut the hot and ground wires to length. Install QD terminals on the hot wires. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil. Attach the QD terminals to the LOAD terminals on the relays. It doesn't matter which J1772 hot wire connects to which relay. Connect the ground wire to the ground bus. The pilot line will be attached to the logic/display board later.
 
+=== External relay HV board steps ===
+
+The external relay HV board can drive either two SPST relays or a single DPST relay. In either case, the relay coils must be compatible with 12 VDC and draw no more than 400 mA total. This board is designed to be a direct replacement for the OpenEVSE v2 board, and can be used with the recommended fuse block for a maximum charge current of 24A.
+
+Start by preparing the mounting plate. If you're using an OpenEVSE chassis, then it will come with either a plastic or metal mounting plate. Use the supplied hardware to install the fuse block. Prepare two 22 gauge red and black wires. Trim 3/8" insulation off one end of each and 1/8" off the other end. Crimp a .25" QD terminal on the end of each wire trimmed to 3/8". Connect the QD terminals to the QD flanges on the load end of each fuse block. Connect the other end of each to the HV board's AC IN terminal.
+
+Use the supplied hardware to install the relay(s). If you're not using the recommended SPST relays, then you will need to drill new holes to place a DPST relay (the recommended model is a TE T92P7D22-12. If you're using the two recommended SPST relays, then prepare two 22 gauge wires by crimping two .187" female QD terminals on each, with enough wire between each to reach between the two relays and enough wire at one end to reach over to where the HV board will be installed. If you're using the DPST relay, then instead crimp a .25" QD terminal on one end of each of two 22 gauge wires. In either case, attach all of the appropriate QD terminals to the relay coils, leaving the free ends near where the HV board will be installed. If you're using two SPST relays, their coils must be wired in parallel.
+
+Mount the ground bar in its intended location on the top half of the mounting plate.
+
+Place the HV board in the top half and measure for drilling four new screw holes to mount it. Make sure the board is mounted as far away as possible from everything surrounding it. Drill four 1/8" holes and install the HV board using the mounting hardware and standoffs supplied for the purpose. The AC and relay test terminals should be mounted on the opposite end of the mounting plate as the ground bar.
+
+Attach the relay wires to the relay terminal on the HV board.
+
+If your mounting plate is plastic, then connect a 22 gauge wire to a .25" QD terminal and install that on the ground terminal of the HV board. Connect the other end to the ground bus. If your mounting hardware and mounting plate are metal, you may omit this step. It is also recommended that you prepare a 16 gauge wire with a crimp ring terminal to install under one of the panel mounting screws with the other end also connected to the ground bar. This is intended to ground the metal chassis. If your chassis is plastic, you may omit this step.
+
+Mount the mounting plate inside your chassis using the screws provided. If you've prepared a grounding wire with a ring terminal, be sure to run one of the mounting screws through it.
+
+Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and connect the ground wire to the ground bus and the other two wires to each of the two line side terminals on the fuse block. Take two lengths of wire trimmed from the AC cable sized to reach from the load side of the fuse terminal to the line side of the relay(s). Trim 3/8" of insulation off each end of each wire. Crimp a QD terminal on one end of each wire. Install the QD terminals on the line sides of the relay(s). Screw the other end of the large wires into the load side of the fuse blocks, matching the colors with the AC input wires.
+
+Strip 6 inches of jacket off of the end of your J1772 cable and identify each of the wires inside - the ground, two hot lines, and pilot. If your cable includes a proximity line, trim it short to keep it out of the way. Install a cable gland and install the gland in the chassis. Run each hot line through the GFI coil and one of them through the ammeter coil. Then trim 5/8" off of each hot line. Cut two red and black 6 inch 22 gauge wires and trim 3/8" of insulation off one end and 1/8" off the other end of each. Take one of the 22 gauge wires and one of the large J1772 cable hot wires (matching the colors) and insert them both into a .25" QD female crimp terminal and securely crimp the terminal into place. Connect the QD terminals to the load side of the relay(s), and connect the free end of the two 22 gauge wires to the "relay test" terminals on the HV board. When doing so, make sure to match the hot line to the H terminal and the neutral line to the N terminal (if you're in North America and only intend to use 208/240 VAC, then it doesn't matter which is which). If you get this backwards, then the ground impedance test will fail.
+
 === Contactor HV board steps ===
 
 Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and connect one hot line of the AC cable to the contactor on the line side. Connect the ground wire of the AC cable to the ground bus.
