--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -58,7 +58,7 @@ Next, install the board-mounted QD grounding terminal. Use a lot of solder to fl
 
 Next, install the 3 1/2W flameproof resistors. For North American installations, all three will be 150K, but for 220V hot-neutral systems (basically just about everywhere outside of North America), you must use a 300K resistor for the ground impedance test series resistor. DO NOT use 150K on 220V hot-neutral electrical systems or you may burn out the current limiter! Note that 208/240V power in North America is hot-hot, and each hot line is 120V to ground, so 150K *is* the correct value.
 
-Next, install the fuses. If you have the contactor board, then you have three fuses. Two are slow-blow fuses intended for the power supply, and the third is a normal fuse for the contactor. Two of the fuses, therefore, should have similar color and markings and should be easy to distinguish. The oddball fuse should be oriented 90 degrees different from the other two.
+Next, install the fuses. If you have the contactor board, then you have three fuses. Two are slow-blow fuses intended for the power supply, and the third is a normal fuse for the contactor. Two of the fuses, therefore, should have similar color and markings and should be easy to distinguish. The oddball fuse should be oriented 90 degrees different from the other two. If you have the contactor board, you will also have a MOV. It will look somewhat like a ceramic capacitor, but will be thicker and likely blue. Install this in the two holes immediately adjacent to the contactor terminal.
 
 Next, depending on which board you have, you will install either one or two electrolytic capacitors. If you have two, take careful note of which is which. The 120 µF cap is installed in the logic section, and the 4.7 µF 400V cap is installed in the HV section. *Be sure to carefully note the polarity of each*.
 
