--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -193,7 +193,8 @@ The stuck relay test is a cross between the voltmeter and the ground impedance t
 = Schematics =
 
   * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_Logic_0_5.pdf Logic/display board v0.5]
-  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Ext_Relay_0_5.pdf HV+Relay board v0.5]
+  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Ext_Relay_0_5.pdf HV+External Relay board v0.5]
+  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Relay_0_5.pdf HV+Relay board v0.5]
   * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Contactor_0_5.pdf HV+Contactor board v0.5]
 
 = Links =
